[package]
name = "first_blinky"
version = "0.1.0"
authors = ["Ben PHL <benphawke@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32c3-hal = "0.9.0"
esp-backtrace = { version = "0.7.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println       = { version = "0.5.0", features = ["esp32c3"] }
smart-leds = {version = "0.3.0" }
esp-hal-smartled = { version = "0.2.0", features = ["esp32c3"] }

# hal = { package = "esp32c3-hal", version = "0.9.0" }
# esp-backtrace = { version = "0.7.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
# esp-println       = { version = "0.5.0", features = ["esp32c3"] }
# smart-leds        = "0.3.0"
# # esp-hal-smartled  = { version = "0.2.0", features = ["esp32c3"], path = "../esp-hal-smartled" }
# esp-hal-smartled  = { version = "0.2.0", features = ["esp32c3"] }
